[Project] Update SAM for live env

--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -15,7 +15,8 @@
     "build-node": "npm run symlink && npm run gen && tsc --noEmit",
     "build-sam": "sam build --cached --parallel",
     "build": "npm run build-go && npm run build-node && npm run build-sam",
-    "deploy": "npm run build && sam deploy --no-fail-on-empty-changeset",
+    "deploy": "npm run build && sam deploy",
+    "deploy:live": "npm run build && sam deploy --config-env live",
     "logs": "sam logs --stack-name auth-service --tail",
     "start": "(npm run build) && (sam local start-api -p 7000 --warm-containers=EAGER)",
     "watch": "nodemon -e go,graphql,yaml.json,ts -i generated__graphql.go -i __generated__ --signal SIGINT -x 'npm run start || exit 1'",
