--- a/echo-service/package.json
+++ b/echo-service/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "sam build",
-    "deploy": "npm run build && sam deploy --no-fail-on-empty-changeset",
+    "deploy": "npm run build && sam deploy",
+    "deploy:live": "npm run build && sam deploy --config-env live",
     "logs": "sam logs --stack-name dev-echo-service --tail"
   },
   "devDependencies": {
