--- a/echo-service/samconfig.toml
+++ b/echo-service/samconfig.toml
@@ -7,15 +7,19 @@ s3_prefix = "dev-echo-service"
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"DEV\" MainDomain=\"devfastchargeapi.com\" Route53ZoneId=\"Z07362872NENGXHWMNLU5\" EnvDevDomain=\"1\""
-image_repositories = []
 resolve_s3 = true
+image_repositories = []
+no_fail_on_empty_changeset = true
 
 [live]
 [live.deploy]
 [live.deploy.parameters]
-s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-ku0vhjb0ewl6"
-s3_prefix = "echo-service"
+profile = "live_fastchargeapi"
+stack_name = "live-echo-service"
+s3_prefix = "live-echo-service"
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"LIVE\" MainDomain=\"fastchargeapi.com\" Route53ZoneId=\"Z0358815GI2I8U5CTHXW\""
+resolve_s3 = true
 image_repositories = []
+no_fail_on_empty_changeset = true
