--- a/gateway-service/samconfig.toml
+++ b/gateway-service/samconfig.toml
@@ -9,14 +9,17 @@ capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"DEV\" MainDomain=\"devfastchargeapi.com\" Route53ZoneId=\"Z07362872NENGXHWMNLU5\" EnvDevDomain=\"1\""
 image_repositories = []
 resolve_s3 = true
+no_fail_on_empty_changeset = true
 
 [live]
 [live.deploy]
 [live.deploy.parameters]
-stack_name = "gateway-service"
-s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-ku0vhjb0ewl6"
-s3_prefix = "gateway-service"
+profile = "live_fastchargeapi"
+stack_name = "live-gateway-service"
+s3_prefix = "live-gateway-service"
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"DEV\" MainDomain=\"fastchargeapi.com\" Route53ZoneId=\"Z0358815GI2I8U5CTHXW\""
 image_repositories = []
+resolve_s3 = true
+no_fail_on_empty_changeset = true
