--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -16,7 +16,8 @@
     "build:x86": "(npm run prebuild) && (sam build)",
     "build:arm": "(npm run prebuild) && (sam build --parallel)",
     "build": "npm run build:arm",
-    "deploy": "npm run build && sam deploy --no-fail-on-empty-changeset",
+    "deploy": "npm run build && sam deploy",
+    "deploy:live": "npm run build && sam deploy --config-env live",
     "stripe": "stripe listen --forward-to https://api.v2.payment.fastchargeapi.com/accept-stripe-payment -e 'checkout.session.completed,checkout.session.expired,checkout.session.async_payment_succeeded,checkout.session.async_payment_failed' & stripe listen --forward-to https://api.v2.payment.fastchargeapi.com/finish-stripe-onboard -e 'account.updated'",
     "logs": "sam logs --stack-name dev-payment-service --tail",
     "start": "npm run build && sam local start-api -p 3000 --warm-containers lazy",
