--- a/payment-service/samconfig.toml
+++ b/payment-service/samconfig.toml
@@ -9,14 +9,17 @@ region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"DEV\" MainDomain=\"devfastchargeapi.com\" Route53ZoneId=\"Z07362872NENGXHWMNLU5\" EnvDevDomain=\"1\""
 image_repositories = []
+no_fail_on_empty_changeset =  true
 
 [live]
 [live.deploy]
 [live.deploy.parameters]
-stack_name = "payment-service"
-s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-ku0vhjb0ewl6"
-s3_prefix = "payment-service"
+profile="live_fastchargeapi"
+stack_name = "live-payment-service"
+s3_prefix = "live-payment-service"
+resolve_s3 = true
 region = "us-east-1"
 capabilities = "CAPABILITY_IAM"
 parameter_overrides = "Stage=\"DEV\" MainDomain=\"fastchargeapi.com\" Route53ZoneId=\"Z0358815GI2I8U5CTHXW\""
 image_repositories = []
+no_fail_on_empty_changeset =  true
