--- a/graphql-service/template.yaml
+++ b/graphql-service/template.yaml
@@ -54,32 +54,27 @@ Globals:
             Access-Control-Allow-Origin: "'*'"
 
 Resources:
-  NestedStack:
-    Type: AWS::CloudFormation::Stack
-    Properties:
-      TemplateURL: ./template-dynamodb.yaml
-
   # Give account permission to log to CloudWatch. Probably only need once per
   # account.
-  ApiCWLRoleArn:
-    Type: AWS::ApiGateway::Account
-    Properties:
-      CloudWatchRoleArn: !GetAtt CloudWatchRole.Arn
+  # ApiCWLRoleArn:
+  #   Type: AWS::ApiGateway::Account
+  #   Properties:
+  #     CloudWatchRoleArn: !GetAtt CloudWatchRole.Arn
 
-  # IAM Role for API Gateway + CloudWatch Logging
-  CloudWatchRole:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          Action: "sts:AssumeRole"
-          Effect: Allow
-          Principal:
-            Service: apigateway.amazonaws.com
-      Path: /
-      ManagedPolicyArns:
-        - "arn:aws:iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs"
+  # # IAM Role for API Gateway + CloudWatch Logging
+  # CloudWatchRole:
+  #   Type: AWS::IAM::Role
+  #   Properties:
+  #     AssumeRolePolicyDocument:
+  #       Version: "2012-10-17"
+  #       Statement:
+  #         Action: "sts:AssumeRole"
+  #         Effect: Allow
+  #         Principal:
+  #           Service: apigateway.amazonaws.com
+  #     Path: /
+  #     ManagedPolicyArns:
+  #       - "arn:aws:iam::aws:policy/service-role/AmazonAPIGatewayPushToCloudWatchLogs"
 
   # This is a custom build layer. See:
   # https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/building-layers.html
@@ -105,7 +100,6 @@ Resources:
     Type: AWS::IAM::Role
     Properties:
       Description: "Apollo GraphQL Service Role"
-      RoleName: GraphQLServiceRole
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
@@ -144,6 +138,29 @@ Resources:
                   - "sqs:SendMessage"
                   - "sqs:GetQueueAttributes"
 
+  # This role gives API Gateway permission to invoke all lambda functions
+  APIGatewayInvokeRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - apigateway.amazonaws.com
+            Action:
+              - sts:AssumeRole
+      Policies:
+        - PolicyName: APIGatewayInvokePolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Resource: "*"
+                Action:
+                  - "lambda:InvokeFunction"
+
   # Create another gateway with IAM based authentication
   APIGatewayIAM:
     Type: AWS::Serverless::Api
@@ -156,6 +173,7 @@ Resources:
       StageName: !Ref Stage
       Auth:
         DefaultAuthorizer: AWS_IAM
+        InvokeRole: !GetAtt APIGatewayInvokeRole.Arn
 
   ApolloServerIAM:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
@@ -202,9 +220,11 @@ Resources:
       Auth: # Uses the FirebaseTokenAuthorizerAllowingAnonymousUser to identify the session user.
         ApiKeyRequired: false
         DefaultAuthorizer: FirebaseTokenAuthorizerAllowingAnonymousUser
+        InvokeRole: !GetAtt APIGatewayInvokeRole.Arn
         Authorizers:
           FirebaseTokenAuthorizerAllowingAnonymousUser:
             FunctionPayloadType: REQUEST
+            FunctionInvokeRole: !GetAtt APIGatewayInvokeRole.Arn
             FunctionArn: !Sub arn:aws:lambda:us-east-1:${AWS::AccountId}:function:FirebaseTokenAuthorizerAllowingAnonymousUser
             Identity:
               ReauthorizeEvery: 300
@@ -348,16 +368,3 @@ Resources:
         Target: "es2022"
         EntryPoints:
           - settleAccountActivities.ts
-# Outputs:
-#   # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
-#   # Find out more about other implicit resources you can reference within SAM
-#   # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
-#   APIGateway:
-#     Description: "API Gateway endpoint URL"
-#     Value: !Sub "https://${APIGateway}.execute-api.${AWS::Region}.amazonaws.com/${Stage}"
-#   ApolloServer:
-#     Description: "ApolloServer ARN"
-#     Value: !GetAtt ApolloServer.Arn
-#   ApolloServerIamRole:
-#     Description: "Implicit IAM Role created (ApolloServerRole)"
-#     Value: !GetAtt ApolloServerRole.Arn
