--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -19,7 +19,8 @@
     "deploy": "npm run build && sam deploy",
     "deploy:live": "npm run build && sam deploy --config-env live",
     "stripe": "stripe listen --forward-to https://api.v2.payment.fastchargeapi.com/accept-stripe-payment -e 'checkout.session.completed,checkout.session.expired,checkout.session.async_payment_succeeded,checkout.session.async_payment_failed' & stripe listen --forward-to https://api.v2.payment.fastchargeapi.com/finish-stripe-onboard -e 'account.updated'",
-    "logs": "sam logs --stack-name dev-payment-service --tail",
+    "logs": "sam logs --tail",
+    "logs:live": "sam logs --config-env live --tail",
     "start": "npm run build && sam local start-api -p 3000 --warm-containers lazy",
     "watch": "nodemon -e ts,graphql,yml,yaml -i __generated__ --signal SIGINT -x 'npm run typecheck'",
     "test": "jest",
