--- a/search-service/package.json
+++ b/search-service/package.json
@@ -13,7 +13,8 @@
     "build": "npm run symlink && npm run gen && tsc --noEmit && sam build --cached --parallel",
     "deploy": "npm run build && sam deploy",
     "deploy:live": "npm run build && sam deploy --config-env live",
-    "logs": "sam logs --stack-name dev-search-service --tail",
+    "logs": "sam logs --tail",
+    "logs:live": "sam logs --config-env live --tail",
     "start": "npm run build && sam local start-api -p 11000 --warm-containers lazy",
     "watch": "nodemon -e ts,graphql,yml,yaml -i __generated__ --signal SIGINT -x 'npm run start || exit 1'",
     "test": "jest --runInBand",
