--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -17,7 +17,8 @@
     "build": "npm run build-go && npm run build-node && npm run build-sam",
     "deploy": "npm run build && sam deploy",
     "deploy:live": "npm run build && sam deploy --config-env live",
-    "logs": "sam logs --stack-name auth-service --tail",
+    "logs": "sam logs --tail",
+    "logs:live": "sam logs --config-env live --tail",
     "start": "(npm run build) && (sam local start-api -p 7000 --warm-containers=EAGER)",
     "watch": "nodemon -e go,graphql,yaml.json,ts -i generated__graphql.go -i __generated__ --signal SIGINT -x 'npm run start || exit 1'",
     "test": "echo TODO (No tests yet)",
