--- a/auth-service/template.yaml
+++ b/auth-service/template.yaml
@@ -131,22 +131,15 @@ Resources:
             Principal:
               Service:
                 - apigateway.amazonaws.com
-      Tags:
-        - Key: lambda:createdBy
-          Value: SAM
-
-  LambdaInvocationPolicy:
-    Type: AWS::IAM::Policy
-    Properties:
-      PolicyName: LambdaInvocationPolicy
-      PolicyDocument:
-        Version: "2012-10-17"
-        Statement:
-          - Effect: Allow
-            Action: lambda:InvokeFunction
-            Resource: !Sub arn:aws:lambda:us-east-1:${AWS::AccountId}:function:FirebaseTokenAuthorizer
-      Roles:
-        - !Ref APIGatewayV2Role
+      Policies:
+        - PolicyName: APIGatewayInvokePolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Resource: "*"
+                Action:
+                  - "lambda:InvokeFunction"
 
   RefreshIDToken:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
