[Project] Update eslint config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,4 +71,10 @@
   "eslint.options": {
     "cache": true,
   },
+  "eslint.onIgnoredFiles": "warn",
+  "eslint.workingDirectories": [
+    {
+      "mode": "auto"
+    }
+  ],
 }
