--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,14 +29,8 @@
     "moduleResolution": "node", /* Specify how TypeScript looks up a file from a given module specifier. */
     "baseUrl": "./", /* Specify the base directory to resolve non-relative module names. */
     // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
-    "rootDirs": [
-      "./node_modules",
-      "./graphql-service/apollo/node_modules/",
-    ], /* Allow multiple folders to be treated as one when resolving modules. */
-    "typeRoots": [
-      "./node_modules/@types",
-      "./graphql-service/apollo/node_modules/@types",
-    ], /* Specify multiple folders that act like './node_modules/@types'. */
+    // "rootDirs": [], /* Allow multiple folders to be treated as one when resolving modules. */
+    // "typeRoots": [], /* Specify multiple folders that act like './node_modules/@types'. */
     "types": [
       "node"
     ], /* Specify type package names to be included without being referenced in a source file. */
@@ -105,9 +99,6 @@
   "lib": [
     "es2020"
   ],
-  "include": [
-    "./graphql-service/apollo/**/*.ts",
-    "./graphql-service/apollo/**/*.tsx"
-  ],
+  // "include": [],
   // "files": ["."]
 }
